--- a/Auto_Search.ipynb
+++ b/Auto_Search.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sam = 65000\n",
+    "sam = 68830\n",
     "df = df.iloc[:sam]\n",
     "\n",
     "df2 = df\n",
@@ -76,7 +76,7 @@
     "    valid = df2.iloc[split:]\n",
     "    return testData,testPower,trainPower,trainData,valid\n",
     "\n",
-    "split = 60000 # 从一万开始分开\n",
+    "split = 68730 # 开始分开\n",
     "X_test,y_test,y_train,X_train,valid = split_function(split,dfdata,dfpower,df2)\n",
     "\n"
    ]
@@ -359,8 +359,8 @@
     }
    ],
    "source": [
-    "plt.plot(range(1,501),y_test[:500],c=\"orange\",label=\"test\")\n",
-    "plt.plot(range(1,501),y_pred_test[:500],c=\"blue\",label=\"prediction\")\n",
+    "plt.plot(range(1,101),y_test[:100],c=\"orange\",label=\"test\")\n",
+    "plt.plot(range(1,101),y_pred_test[:100],c=\"blue\",label=\"prediction\")\n",
     "plt.title('Model performance at the test set')\n",
     "\n",
     "plt.legend()"
@@ -532,7 +532,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -546,12 +546,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a42ccb73e7d9bfdf27e036f1d2b8b681e55fc0743cc5586bc2474d4a60f4b886"
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
    }
   }
  },
